# cuda-hello

./: .clangd  CMakeLists.txt  Dockerfile  README.md  build_project.sh  hello.cu  simple_add.cu
.devcontainer/: devcontainer.json
src/: gaussian_blur_cpu.cpp  gaussian_blur_cpu.h  gaussian_blur_cuda.cu  gaussian_blur_cuda.h  image.cpp  image.h  main.cpp  simple_add.cu
